[package]
name = "rp2040-flash"
version = "0.6.0"
authors = ["Jan Niehusmann"]
edition = "2021"
resolver = "2"
license = "MIT OR Apache-2.0"
description = "Support for writing the flash memory of the Raspberry Silicon RP2040."
repository = "https://github.com/jannic/rp2040-flash"
homepage = "https://github.com/jannic/rp2040-flash/"
readme = "README.md"

[dependencies]
rp2040-hal = { version = "0.11.0", default-features = false }

[dev-dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
defmt = "0.3.2"
defmt-rtt = "0.4.0"
embedded-hal = "0.2.7"
embedded-time = "0.12.1"
panic-probe = "0.3.0"
rp2040-boot2 = "0.3.0"
rp2040-hal = { version = "0.11.0", features = ["critical-section-impl"] }
